# fastapi-template

./: .env.example  Dockerfile  README.md  docker-compose.yml  pyproject.toml
app/: cli.py  main.py
app/dependencies/: auth.py  config.py
app/dependencies/auth/: core.py
app/models/: users.py
app/routes/admin/: __init__.py  users.py
app/routes/api/: __init__.py
app/routes/api/utils/: __init__.py
migrations/: README  env.py
migrations/versions/: 6141e335aad1_creating_user_table.py  6ce658f6d3eb_creating_user_table.py
